--- a/cyberimmunity--autonomous-car-m1.ipynb
+++ b/cyberimmunity--autonomous-car-m1.ipynb
@@ -141,13 +141,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# раскомментируйте строчку ниже и запустите ячейку на выполнение\n",
     "\n",
-    "#%pip install -r requirements.txt\n",
+    "%pip install -r requirements.txt\n",
     "\n",
     "# при наличии ошибок установите пакеты из файла requirements.txt другим подходящим способом - \n",
     "# например, как системные пакеты"
@@ -411,11 +411,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# вставьте свой код в эту ячейку"
+    "class CommunicationGateway(BaseCommunicationGateway):\n",
+    "    \"\"\"CommunicationGateway класс для реализации логики взаимодействия\n",
+    "    с системой планирования заданий\n",
+    "\n",
+    "    Работает в отдельном процессе, поэтому создаётся как наследник класса Process\n",
+    "    \"\"\"\n",
+    "    def _send_mission_to_consumers(self):\n",
+    "        \"\"\" метод для отправки сообщения с маршрутным заданием в систему управления \"\"\"\n",
+    "        \n",
+    "        # имена очередей блоков находятся в файле src/config.py\n",
+    "        # события нужно отправлять в соответствие с диаграммой информационных потоков\n",
+    "        control_q_name = CONTROL_SYSTEM_QUEUE_NAME\n",
+    "\n",
+    "        # события передаются в виде экземпляров класса Event, \n",
+    "        # описание класса находится в файле src/event_types.py\n",
+    "        event = Event(source=BaseCommunicationGateway.event_source_name,\n",
+    "                      destination=control_q_name,\n",
+    "                      operation=\"set_mission\", parameters=self._mission\n",
+    "                      )\n",
+    "\n",
+    "        # поиск в каталоге нужной очереди (в данном случае - системы управления)\n",
+    "        control_q: Queue = self._queues_dir.get_queue(control_q_name)\n",
+    "        # отправка события в найденную очередь\n",
+    "        control_q.put(event)"
    ]
   },
   {
@@ -454,12 +477,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# найдите подходящее имя очереди в файле src/config.py и добавьте в строчку ниже\n",
-    "#from src.config import \n",
+    "from src.config import CONTROL_SYSTEM_QUEUE_NAME\n",
     "from src.control_system import BaseControlSystem\n",
     "\n",
     "\n",
@@ -467,16 +489,21 @@
     "    \"\"\"ControlSystem блок расчёта управления \"\"\"\n",
     "\n",
     "    def _send_speed_and_direction_to_consumers(self, speed, direction):\n",
-    "        servos_q_name = None # замените на правильное название очереди\n",
+    "        servos_q_name = CONTROL_SYSTEM_QUEUE_NAME\n",
     "        servos_q: Queue = self._queues_dir.get_queue(servos_q_name)\n",
     "\n",
     "        # отправка сообщения с желаемой скоростью\n",
-    "        event_speed = None # замените на код создания сообщения со скоростью для приводов\n",
-    "                           # подсказка, требуемая операция - set_speed\n",
+    "        event_speed = Event(source=BaseControlSystem.event_source_name,\n",
+    "                            destination=servos_q_name,\n",
+    "                            operation=\"set_speed\", \n",
+    "                            parameters=speed\n",
+    "                            )\n",
     "\n",
     "        # отправка сообщения с желаемым направлением\n",
-    "        event_direction = None # замените на код создания сообщения с направлением для приводов\n",
-    "                               # подсказка, требуемая операция - set_direction\n",
+    "        event_direction = Event(source=BaseControlSystem.event_source_name,\n",
+    "                                destination=servos_q_name,\n",
+    "                                operation=\"set_direction\",\n",
+    "                                parameters=direction)\n",
     "\n",
     "        servos_q.put(event_speed)\n",
     "        servos_q.put(event_direction)       \n"
@@ -484,21 +511,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# найдите подходящее имя очереди в файле src/config.py и добавьте в строчку ниже\n",
-    "#from src.config import \n",
+    "from src.config import CONTROL_SYSTEM_QUEUE_NAME\n",
     "from src.navigation_system import BaseNavigationSystem\n",
     "\n",
     "\n",
     "class NavigationSystem(BaseNavigationSystem):\n",
     "    \"\"\" класс навигационного блока \"\"\"\n",
     "    def _send_position_to_consumers(self):        \n",
-    "        control_q_name = None # замените на правильное название очереди\n",
-    "        event = None # замените на код создания сообщения с координатами для системы управления \n",
-    "                     # подсказка, требуемая операция - position_update\n",
+    "        control_q_name = CONTROL_SYSTEM_QUEUE_NAME\n",
+    "        event = Event(source=BaseNavigationSystem.event_source_name,\n",
+    "                      destination=control_q_name,\n",
+    "                      operation=\"position_update\",\n",
+    "                      parameters=self._position\n",
+    "                      )\n",
     "        control_q: Queue = self._queues_dir.get_queue(control_q_name)\n",
     "        control_q.put(event)"
    ]
@@ -651,85 +680,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ИНФО][QUEUES] регистрируем очередь sitl\n",
-      "[ИНФО][SITL] симулятор создан, ID m1\n",
-      "[ИНФО][QUEUES] регистрируем очередь communication\n",
-      "[ИНФО][COMMUNICATION] создан компонент связи\n",
-      "[ИНФО][QUEUES] регистрируем очередь control\n",
-      "[ИНФО][CONTROL] создана система управления\n",
-      "[ИНФО][QUEUES] регистрируем очередь navigation\n",
-      "[ИНФО][NAVIGATION] создан компонент навигации\n",
-      "[ИНФО][QUEUES] регистрируем очередь servos\n",
-      "[ИНФО][SERVOS] создан компонент сервоприводов\n",
-      "[ИНФО][SITL] [SITL] старт симуляции\n",
-      "[ИНФО][NAVIGATION] старт навигации\n",
-      "[ИНФО][SERVOS] старт блока приводов\n",
-      "[ИНФО][COMMUNICATION] старт системы планирования заданий\n",
-      "[ИНФО][CONTROL] старт системы управления\n",
-      "[ИНФО][MISSION PLANNER] старт системы планирования заданий\n",
-      "[ИНФО][MISSION PLANNER] запрошена новая задача, отправляем получателям\n",
-      "[ИНФО][MISSION PLANNER] новая задача отправлена в коммуникационный шлюз\n",
-      "[ИНФО][COMMUNICATION] получен новый маршрут, отправляем в получателям\n",
-      "[ИНФО][CONTROL] установлена новая задача, начинаем следовать по маршруту, текущее время 10:21:35.926808\n",
-      "[ИНФО][CONTROL] новая скорость 30 (была 0)\n",
-      "[ИНФО][CONTROL] новое направление 227 (было 0)\n"
-     ]
-    }
-   ],
-   "source": [
-    "from time import sleep\n",
-    "from src.config import LOG_INFO\n",
-    "\n",
-    "# создаём основные блоки\n",
-    "sitl = SITL(queues_dir=queues_dir, position=home, car_id=car_id, log_level=LOG_INFO)        # <- симулятор движения\n",
-    "communication_gateway = CommunicationGateway(queues_dir=queues_dir, log_level=LOG_INFO)     # <- Связь\n",
-    "control_system = ControlSystem(queues_dir=queues_dir, log_level=LOG_INFO)                   # <- Система управления\n",
-    "navigation_system = NavigationSystem(queues_dir=queues_dir, log_level=LOG_INFO)             # <- Навигация\n",
-    "servos = Servos(queues_dir=queues_dir, log_level=LOG_INFO)                                  # <- Приводы\n",
-    "\n",
-    "\n",
-    "# запускаем созданные выше блоки системы, после этого они начнут обработку входящих событий\n",
-    "sitl.start()\n",
-    "navigation_system.start()\n",
-    "servos.start()\n",
-    "communication_gateway.start()\n",
-    "control_system.start()\n",
-    "mission_planner.start()\n",
-    "\n",
-    "\n",
-    "# пусть машинка немного поездит, \n",
-    "# параметр sleep - время в секундах\n",
-    "sleep(5)\n",
-    "\n",
-    "# останавливаем все компоненты\n",
-    "control_system.stop()\n",
-    "communication_gateway.stop()\n",
-    "mission_planner.stop()\n",
-    "sitl.stop()\n",
-    "servos.stop()\n",
-    "navigation_system.stop()\n",
-    "\n",
-    "# дождёмся завершения работы всех компонентов\n",
-    "control_system.join()\n",
-    "communication_gateway.join()\n",
-    "mission_planner.join()\n",
-    "sitl.join()\n",
-    "servos.join()\n",
-    "navigation_system.join()\n",
-    "\n",
-    "# подчистим все ресурсы для возможности повторного запуска в следующих модулях\n",
-    "del control_system, communication_gateway, mission_planner, sitl, servos, navigation_system"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -750,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,12 +715,18 @@
     "        servos_q: Queue = self._queues_dir.get_queue(servos_q_name)\n",
     "\n",
     "        # инициализация сообщения с желаемой скоростью\n",
-    "        # подсказка: блок Приводы ожидает команду \"set_speed\" с параметром в виде скорости\n",
-    "        event_speed = None # <-- измените эту строку!\n",
+    "        event_speed = Event(source=self.event_source_name,\n",
+    "                            destination=servos_q_name,\n",
+    "                            operation=\"set_speed\",\n",
+    "                            parameters=speed\n",
+    "                            )\n",
     "\n",
     "        # отправка сообщения с желаемым направлением\n",
-    "        # подсказка: блок Приводы ожидает команду \"set_direction\" с параметром в виде направления\n",
-    "        event_direction = None # <-- измените эту строку!\n",
+    "        event_direction = Event(source=self.event_source_name,\n",
+    "                                destination=servos_q_name,\n",
+    "                                operation=\"set_direction\",\n",
+    "                                parameters=direction\n",
+    "                                )\n",
     "\n",
     "        servos_q.put(event_speed)\n",
     "        servos_q.put(event_direction)\n",
@@ -779,28 +735,33 @@
     "        \"\"\" заблокировать грузовой отсек \"\"\"\n",
     "        cargo_q = self._queues_dir.get_queue(CARGO_BAY_QUEUE_NAME)\n",
     "        # инициализация сообщения с командой на блокировку грузового отсека\n",
-    "        # подсказка: блок CargoBay ожидает команду \"lock_cargo\" без параметров\n",
-    "        event = None # <-- измените эту строку!\n",
+    "        event = Event(source=self.event_source_name,\n",
+    "                      destination=CARGO_BAY_QUEUE_NAME,\n",
+    "                      operation=\"lock_cargo\",\n",
+    "                      parameters=None\n",
+    "                      )\n",
     "        cargo_q.put(event)\n",
     "\n",
     "    def _release_cargo(self):\n",
     "        \"\"\" открыть грузовой отсек \"\"\"\n",
     "        cargo_q = self._queues_dir.get_queue(CARGO_BAY_QUEUE_NAME)\n",
     "        # инициализация сообщения с командой на блокировку грузового отсека\n",
-    "        # подсказка: блок CargoBay ожидает команду \"release_cargo\" без параметров\n",
-    "        event = None # <-- измените эту строку!\n",
+    "        event = Event(\n",
+    "            source=self.event_source_name,\n",
+    "            destination=CARGO_BAY_QUEUE_NAME,\n",
+    "            operation=\"release_cargo\",\n",
+    "            parameters=None\n",
+    "            )\n",
     "\n",
     "        cargo_q.put(event)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# пример решения удалить перед выдачей конкурсантам!\n",
-    "\n",
     "from src.config import CARGO_BAY_QUEUE_NAME,\\\n",
     "    SERVOS_QUEUE_NAME\n",
     "    \n",
@@ -857,138 +818,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ИНФО][QUEUES] регистрируем очередь planner.mqtt\n",
-      "[ИНФО][QUEUES] регистрируем очередь sitl.mqtt\n",
-      "[ИНФО][QUEUES] регистрируем очередь planner\n",
-      "[ИНФО][MISSION PLANNER] создана система планирования заданий\n",
-      "[ИНФО][QUEUES] регистрируем очередь sitl\n",
-      "[ИНФО][SITL] симулятор создан, ID m1\n",
-      "[ИНФО][QUEUES] регистрируем очередь communication\n",
-      "[ИНФО][COMMUNICATION] создан компонент связи\n",
-      "[ИНФО][QUEUES] регистрируем очередь control\n",
-      "[ИНФО][CONTROL] создана система управления\n",
-      "[ИНФО][QUEUES] регистрируем очередь navigation\n",
-      "[ИНФО][NAVIGATION] создан компонент навигации\n",
-      "[ИНФО][QUEUES] регистрируем очередь servos\n",
-      "[ИНФО][QUEUES] регистрируем очередь cargo\n",
-      "[ИНФО][CARGO] создан компонент грузового отсека, отсек заблокирован\n",
-      "[ИНФО][MISSION_PLANNER.MQTT] старт клиента телеметрии\n",
-      "[ИНФО][MISSION_PLANNER.MQTT] клиент отправки маршрута создан и запущен[ИНФО][SITL.MQTT] старт клиента телеметрии\n",
-      "\n",
-      "\n",
-      "[ИНФО][SITL.MQTT] клиент отправки телеметрии создан и запущен\n",
-      "[ИНФО][SITL] [SITL] старт симуляции[ИНФО][CARGO] старт блока грузового отсека\n",
-      "[ИНФО][COMMUNICATION] старт системы планирования заданий\n",
-      "[ИНФО][CONTROL] старт системы управления\n",
-      "[ИНФО][MISSION PLANNER] старт системы планирования заданий\n",
-      "[ИНФО][NAVIGATION] старт навигации\n",
-      "[ИНФО][MISSION PLANNER] запрошена новая задача, отправляем получателям\n",
-      "[ИНФО][MISSION PLANNER] новая задача отправлена в коммуникационный шлюз\n",
-      "[ИНФО][COMMUNICATION] получен новый маршрут, отправляем в получателям\n",
-      "[ИНФО][CONTROL] установлена новая задача, начинаем следовать по маршруту, текущее время 10:21:41.571833\n",
-      "[ИНФО][CARGO] заблокировать грузовой отсек\n",
-      "[ИНФО][CARGO] грузовой отсек заблокирован\n",
-      "[ИНФО][MISSION_PLANNER.MQTT] отправлен маршрут: {\"id\": \"m1\", \"mission_str\": \"QGC WPL 110\\n0\\t1\\t0\\t16\\t0\\t5\\t0\\t0\\t59.9386\\t30.3121\\t0\\t1\\n0\\t0\\t3\\t16\\t0\\t5\\t0\\t0\\t59.9386\\t30.3121\\t0\\t1\\n1\\t0\\t3\\t16\\t0\\t5\\t0\\t0\\t59.9421\\t30.3067\\t0\\t1\\n\"}\n",
-      "[ИНФО][CONTROL] новая скорость 60 (была 0)\n",
-      "[ИНФО][CONTROL] новое направление 322 (было 0)\n",
-      "[ИНФО][CONTROL] маршрут пройден, текущее время 10:22:12.691072\n",
-      "[ИНФО][CONTROL] новая скорость 0.0 (была 60)\n",
-      "[ИНФО][CONTROL] новое направление 0 (было 322)\n",
-      "[ИНФО][CARGO] выгрузка\n",
-      "[ИНФО][CARGO] груз оставлен\n"
-     ]
-    }
-   ],
-   "source": [
-    "from time import sleep\n",
-    "from src.mission_planner import MissionPlanner\n",
-    "from src.cargo_bay import CargoBay\n",
-    "from src.config import LOG_ERROR, LOG_INFO\n",
-    "from src.mission_type import Mission, GeoSpecificSpeedLimit\n",
-    "from src.system_wrapper import SystemComponentsContainer\n",
-    "\n",
-    "# вспомогательные блоки для отправки данных в СУПА\n",
-    "from src.mission_planner_mqtt import MissionSender\n",
-    "from src.sitl_mqtt import TelemetrySender\n",
-    "\n",
-    "\n",
-    "mission_sender = MissionSender(\n",
-    "    queues_dir=queues_dir, client_id=car_id, log_level=LOG_INFO)\n",
-    "telemetry_sender = TelemetrySender(\n",
-    "    queues_dir=queues_dir, client_id=car_id, log_level=LOG_INFO)\n",
-    "\n",
-    "home = GeoPoint(latitude=59.9386, longitude=30.3121)\n",
-    "\n",
-    "# сократим маршрут для ускорения процесса\n",
-    "mission = Mission(\n",
-    "    home=home,\n",
-    "    waypoints=[home, GeoPoint(latitude=59.9421, longitude=30.3067)\n",
-    "               ],\n",
-    "    speed_limits=[\n",
-    "        GeoSpecificSpeedLimit(0, 60)\n",
-    "    ],\n",
-    "    armed=True)\n",
-    "\n",
-    "mission_planner = MissionPlanner(\n",
-    "    queues_dir=queues_dir, afcs_present=afcs_present)\n",
-    "mission_planner.set_new_mission(mission=mission)\n",
-    "\n",
-    "sitl = SITL(queues_dir=queues_dir, position=home,\n",
-    "            car_id=car_id, log_level=LOG_INFO, post_telemetry=afcs_present)\n",
-    "communication_gateway = CommunicationGateway(\n",
-    "    queues_dir=queues_dir, log_level=LOG_INFO)\n",
-    "control_system = ControlSystem(queues_dir=queues_dir, log_level=LOG_INFO)\n",
-    "navigation_system = NavigationSystem(\n",
-    "    queues_dir=queues_dir, log_level=LOG_INFO)\n",
-    "servos = Servos(queues_dir=queues_dir, log_level=LOG_ERROR)\n",
-    "cargo_bay = CargoBay(queues_dir=queues_dir, log_level=LOG_INFO)\n",
-    "\n",
-    "\n",
-    "# у нас получилось довольно много блоков, используем класс SystemComponentsContainer\n",
-    "# для упрощения рутинной работы с ними\n",
-    "system_components = SystemComponentsContainer(\n",
-    "    components=[\n",
-    "        mission_sender,\n",
-    "        telemetry_sender,\n",
-    "        sitl,\n",
-    "        navigation_system,\n",
-    "        servos,\n",
-    "        cargo_bay,\n",
-    "        communication_gateway,\n",
-    "        control_system,\n",
-    "        mission_planner\n",
-    "    ] if afcs_present else [\n",
-    "        sitl,\n",
-    "        navigation_system,\n",
-    "        servos,\n",
-    "        cargo_bay,\n",
-    "        communication_gateway,\n",
-    "        control_system,\n",
-    "        mission_planner\n",
-    "    ])\n",
-    "\n",
-    "system_components.start()\n",
-    "\n",
-    "# пусть машинка немного поездит,\n",
-    "# параметр sleep - время в секундах\n",
-    "sleep(35)\n",
-    "\n",
-    "# останавливаем все компоненты\n",
-    "system_components.stop()\n",
-    "\n",
-    "# подчистим все ресурсы для возможности повторного запуска в следующих модулях\n",
-    "system_components.clean()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1021,7 +850,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
