--- a/cyberimmunity--autonomous-car-m2.ipynb
+++ b/cyberimmunity--autonomous-car-m2.ipynb
@@ -35,11 +35,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ваш код"
+    "from multiprocessing import Queue\n",
+    "from src.communication_gateway import BaseCommunicationGateway\n",
+    "from src.config import CONTROL_SYSTEM_QUEUE_NAME, SERVOS_QUEUE_NAME, CONTROL_SYSTEM_QUEUE_NAME, CARGO_BAY_QUEUE_NAME\n",
+    "from src.event_types import Event\n",
+    "from src.control_system import BaseControlSystem\n",
+    "from src.navigation_system import BaseNavigationSystem\n",
+    "\n",
+    "\n",
+    "class CommunicationGateway(BaseCommunicationGateway):\n",
+    "    \"\"\"CommunicationGateway класс для реализации логики взаимодействия\n",
+    "    с системой планирования заданий\n",
+    "\n",
+    "    Работает в отдельном процессе, поэтому создаётся как наследник класса Process\n",
+    "    \"\"\"\n",
+    "    def _send_mission_to_consumers(self):\n",
+    "        \"\"\" метод для отправки сообщения с маршрутным заданием в систему управления \"\"\"\n",
+    "        \n",
+    "        # имена очередей блоков находятся в файле src/config.py\n",
+    "        # события нужно отправлять в соответствие с диаграммой информационных потоков\n",
+    "        control_q_name = CONTROL_SYSTEM_QUEUE_NAME\n",
+    "\n",
+    "        # события передаются в виде экземпляров класса Event, \n",
+    "        # описание класса находится в файле src/event_types.py\n",
+    "        event = Event(source=BaseCommunicationGateway.event_source_name,\n",
+    "                      destination=control_q_name,\n",
+    "                      operation=\"set_mission\", parameters=self._mission\n",
+    "                      )\n",
+    "\n",
+    "        # поиск в каталоге нужной очереди (в данном случае - системы управления)\n",
+    "        control_q: Queue = self._queues_dir.get_queue(control_q_name)\n",
+    "        # отправка события в найденную очередь\n",
+    "        control_q.put(event)\n",
+    "\n",
+    "\n",
+    "class ControlSystem(BaseControlSystem):\n",
+    "    \"\"\"ControlSystem блок расчёта управления \"\"\"\n",
+    "\n",
+    "    def _send_speed_and_direction_to_consumers(self, speed, direction):\n",
+    "        servos_q_name = CONTROL_SYSTEM_QUEUE_NAME\n",
+    "        servos_q: Queue = self._queues_dir.get_queue(servos_q_name)\n",
+    "\n",
+    "        # отправка сообщения с желаемой скоростью\n",
+    "        event_speed = Event(source=BaseControlSystem.event_source_name,\n",
+    "                            destination=servos_q_name,\n",
+    "                            operation=\"set_speed\", \n",
+    "                            parameters=speed\n",
+    "                            )\n",
+    "\n",
+    "        # отправка сообщения с желаемым направлением\n",
+    "        event_direction = Event(source=BaseControlSystem.event_source_name,\n",
+    "                                destination=servos_q_name,\n",
+    "                                operation=\"set_direction\",\n",
+    "                                parameters=direction)\n",
+    "\n",
+    "        servos_q.put(event_speed)\n",
+    "        servos_q.put(event_direction)       \n",
+    "\n",
+    "\n",
+    "    def _lock_cargo(self):\n",
+    "        \"\"\" заблокировать грузовой отсек \"\"\"\n",
+    "        cargo_q = self._queues_dir.get_queue(CARGO_BAY_QUEUE_NAME)\n",
+    "        # инициализация сообщения с командой на блокировку грузового отсека\n",
+    "        event = Event(source=self.event_source_name,\n",
+    "                      destination=CARGO_BAY_QUEUE_NAME,\n",
+    "                      operation=\"lock_cargo\",\n",
+    "                      parameters=None\n",
+    "                      )\n",
+    "        cargo_q.put(event)\n",
+    "\n",
+    "    def _release_cargo(self):\n",
+    "        \"\"\" открыть грузовой отсек \"\"\"\n",
+    "        cargo_q = self._queues_dir.get_queue(CARGO_BAY_QUEUE_NAME)\n",
+    "        # инициализация сообщения с командой на блокировку грузового отсека\n",
+    "        event = Event(\n",
+    "            source=self.event_source_name,\n",
+    "            destination=CARGO_BAY_QUEUE_NAME,\n",
+    "            operation=\"release_cargo\",\n",
+    "            parameters=None\n",
+    "            )\n",
+    "\n",
+    "        cargo_q.put(event)\n",
+    "\n",
+    "\n",
+    "class NavigationSystem(BaseNavigationSystem):\n",
+    "    \"\"\" класс навигационного блока \"\"\"\n",
+    "    def _send_position_to_consumers(self):        \n",
+    "        control_q_name = CONTROL_SYSTEM_QUEUE_NAME\n",
+    "        event = Event(source=BaseNavigationSystem.event_source_name,\n",
+    "                      destination=control_q_name,\n",
+    "                      operation=\"position_update\",\n",
+    "                      parameters=self._position\n",
+    "                      )\n",
+    "        control_q: Queue = self._queues_dir.get_queue(control_q_name)\n",
+    "        control_q.put(event)"
    ]
   },
   {
@@ -149,7 +242,7 @@
    "outputs": [],
    "source": [
     "# создадим wpl файл и запишем туда маршрутное задание\n",
-    "wpl_file = \"module2.wpl\""
+    "wpl_file = \"route-module2.wpl\""
    ]
   },
   {
@@ -162,12 +255,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(wpl_file, \"w\") as f:\n",
-    "    f.write(wpl_file_content)"
+    "#with open(wpl_file, \"w\") as f:\n",
+    "#  f.write(wpl_file_content)"
    ]
   },
   {
@@ -179,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -200,14 +293,14 @@
     "from src.mission_type import GeoSpecificSpeedLimit\n",
     "speed_limits = [\n",
     "    GeoSpecificSpeedLimit(0, 30),\n",
-    "    GeoSpecificSpeedLimit(1, 60),\n",
-    "    GeoSpecificSpeedLimit(5, 20),\n",
+    "    GeoSpecificSpeedLimit(3, 60),\n",
+    "    GeoSpecificSpeedLimit(5, 30),\n",
     "]\n",
     "\n",
     "from src.mission_planner import Mission\n",
     "\n",
     "home = points[0]\n",
-    "mission = Mission(home=home, waypoints=points,speed_limits=speed_limits, armed=True)"
+    "mission = Mission(home=home, waypoints=points, speed_limits=speed_limits, armed=True)"
    ]
   },
   {
