fix module 1 and module 2

--- a/cyberimmunity--autonomous-car-m1.ipynb
+++ b/cyberimmunity--autonomous-car-m1.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,13 +141,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# раскомментируйте строчку ниже и запустите ячейку на выполнение\n",
     "\n",
-    "%pip install -r requirements.txt\n",
+    "#%pip install -r requirements.txt\n",
     "\n",
     "# при наличии ошибок установите пакеты из файла requirements.txt другим подходящим способом - \n",
     "# например, как системные пакеты"
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -411,10 +411,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from multiprocessing import Queue\n",
+    "from src.communication_gateway import BaseCommunicationGateway\n",
+    "from src.config import CONTROL_SYSTEM_QUEUE_NAME\n",
+    "from src.event_types import Event\n",
+    "\n",
     "class CommunicationGateway(BaseCommunicationGateway):\n",
     "    \"\"\"CommunicationGateway класс для реализации логики взаимодействия\n",
     "    с системой планирования заданий\n",
@@ -450,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +855,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
