--- a/cyberimmunity--autonomous-car-m2.ipynb
+++ b/cyberimmunity--autonomous-car-m2.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,18 +195,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "wpl_file_content =  \"\"\"QGC WPL 110\n",
-    "0\t1\t0\t16\t0\t5\t0\t0\t59.9391061791295741\t30.3156781196594238\t0\t1\n",
-    "1\t0\t3\t16\t0\t5\t0\t0\t59.938515001968419\t30.312201976776123\t0\t1\n",
-    "2\t0\t3\t16\t0\t5\t0\t0\t59.9421371401196978\t30.3066229820251465\t0\t1\n",
-    "3\t0\t3\t16\t0\t5\t0\t0\t59.9410946067827126\t30.3039407730102539\t0\t1\n",
-    "4\t0\t3\t16\t0\t5\t0\t0\t59.9403744872963955\t30.302116870880127\t0\t1\n",
-    "5\t0\t3\t16\t0\t5\t0\t0\t59.9412316426749499\t30.3011056780815125\t0\t1\n",
-    "6\t0\t3\t16\t0\t5\t0\t0\t59.9411147591553188\t30.3006818890571594\t0\t1\n",
+    "0\t1\t0\t16\t0\t5\t0\t0\t59.874951\t29.825225\t0\t1\n",
+    "1\t0\t3\t16\t0\t5\t0\t0\t59.876213\t29.826911\t0\t1\n",
+    "2\t0\t3\t16\t0\t5\t0\t0\t59.877475\t29.828597\t0\t1\n",
+    "3\t0\t3\t16\t0\t5\t0\t0\t59.878737\t29.830283\t0\t1\n",
+    "4\t0\t3\t16\t0\t5\t0\t0\t59.879999\t29.831969\t0\t1\n",
+    "5\t0\t3\t16\t0\t5\t0\t0\t59.881261\t29.833655\t0\t1\n",
+    "6\t0\t3\t16\t0\t5\t0\t0\t59.886483\t29.832345\t0\t1\n",
     "\"\"\"\n"
    ]
   },
@@ -237,12 +237,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# создадим wpl файл и запишем туда маршрутное задание\n",
-    "wpl_file = \"route-module2.wpl\""
+    "wpl_file = \"module2.wpl\""
    ]
   },
   {
@@ -255,12 +255,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#with open(wpl_file, \"w\") as f:\n",
-    "#  f.write(wpl_file_content)"
+    "with open(wpl_file, \"w\") as f:\n",
+    "  f.write(wpl_file_content)"
    ]
   },
   {
@@ -272,14 +272,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Point(59.939106179129574, 30.315678119659424, 0.0), Point(59.93851500196842, 30.312201976776123, 0.0), Point(59.9421371401197, 30.306622982025146, 0.0), Point(59.94109460678271, 30.303940773010254, 0.0), Point(59.940374487296396, 30.302116870880127, 0.0), Point(59.94123164267495, 30.301105678081512, 0.0), Point(59.94111475915532, 30.30068188905716, 0.0)]\n"
+      "[Point(59.874951, 29.825225, 0.0), Point(59.876213, 29.826911, 0.0), Point(59.877475, 29.828597, 0.0), Point(59.878737, 29.830283, 0.0), Point(59.879999, 29.831969, 0.0), Point(59.881261, 29.833655, 0.0), Point(59.886483, 29.832345, 0.0)]\n"
      ]
     }
    ],
@@ -292,10 +292,9 @@
     "\n",
     "from src.mission_type import GeoSpecificSpeedLimit\n",
     "speed_limits = [\n",
-    "    GeoSpecificSpeedLimit(0, 30),\n",
-    "    GeoSpecificSpeedLimit(3, 60),\n",
-    "    GeoSpecificSpeedLimit(5, 30),\n",
-    "]\n",
+    "    GeoSpecificSpeedLimit(0, 20),\n",
+    "    GeoSpecificSpeedLimit(2, 60)\n",
+    "    ]\n",
     "\n",
     "from src.mission_planner import Mission\n",
     "\n",
@@ -312,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -332,52 +331,22 @@
       "[ИНФО][QUEUES] регистрируем очередь servos\n",
       "[ИНФО][QUEUES] регистрируем очередь cargo\n",
       "[ИНФО][CARGO] создан компонент грузового отсека, отсек заблокирован\n",
-      "[ИНФО][CARGO] старт блока грузового отсека\n",
-      "[ИНФО][CONTROL] старт системы управления\n",
       "[ИНФО][MISSION PLANNER] старт системы планирования заданий\n",
-      "[ИНФО][MISSION PLANNER] запрошена новая задача, отправляем получателям\n",
-      "[ИНФО][MISSION PLANNER] новая задача отправлена в коммуникационный шлюз\n"
+      "[ИНФО][CARGO] старт блока грузового отсека[ИНФО][CONTROL] старт системы управления\n",
+      "\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ИНФО][CONTROL] установлена новая задача, начинаем следовать по маршруту, текущее время 10:23:40.127052\n",
+      "[ИНФО][MISSION PLANNER] запрошена новая задача, отправляем получателям\n",
+      "[ИНФО][MISSION PLANNER] новая задача отправлена в коммуникационный шлюз\n",
+      "[ИНФО][CONTROL] установлена новая задача, начинаем следовать по маршруту, текущее время 17:31:48.407299\n",
       "[ИНФО][CARGO] заблокировать грузовой отсек\n",
       "[ИНФО][CARGO] грузовой отсек заблокирован\n",
-      "[ИНФО][CONTROL] новая скорость 30 (была 0)\n",
-      "[ИНФО][CONTROL] новое направление 254 (было 0)\n",
-      "[ИНФО][CONTROL] сегмент пройден\n",
-      "[ИНФО][CONTROL] новая скорость 60 (была 30)\n",
-      "[ИНФО][CONTROL] новое направление 322 (было 254)\n",
-      "[ИНФО][CONTROL] сегмент пройден\n",
-      "[ИНФО][CONTROL] новое направление 233 (было 322)\n",
-      "[ИНФО][CONTROL] новое направление 230 (было 233)\n",
-      "[ИНФО][CONTROL] новое направление 228 (было 230)\n",
-      "[ИНФО][CONTROL] новое направление 227 (было 228)\n",
-      "[ИНФО][CONTROL] новое направление 228 (было 227)\n",
-      "[ИНФО][CONTROL] сегмент пройден\n",
-      "[ИНФО][CONTROL] новое направление 231 (было 228)\n",
-      "[ИНФО][CONTROL] новое направление 232 (было 231)\n",
-      "[ИНФО][CONTROL] сегмент пройден\n",
-      "[ИНФО][CONTROL] новое направление 327 (было 232)\n",
-      "[ИНФО][CONTROL] новое направление 331 (было 327)\n",
-      "[ИНФО][CONTROL] новое направление 336 (было 331)\n",
-      "[ИНФО][CONTROL] новое направление 337 (было 336)\n",
-      "[ИНФО][CONTROL] сегмент пройден\n",
-      "[ИНФО][CONTROL] новая скорость 20 (была 60)\n",
-      "[ИНФО][CONTROL] новое направление 237 (было 337)\n",
-      "[ИНФО][CONTROL] новое направление 221 (было 237)\n",
-      "[ИНФО][CONTROL] новое направление 209 (было 221)\n",
-      "[ИНФО][CONTROL] новое направление 206 (было 209)\n",
-      "[ИНФО][CONTROL] новое направление 205 (было 206)\n",
-      "[ИНФО][CONTROL] новое направление 204 (было 205)\n",
-      "[ИНФО][CONTROL] маршрут пройден, текущее время 10:25:12.753377\n",
-      "[ИНФО][CONTROL] новая скорость 0.0 (была 20)\n",
-      "[ИНФО][CONTROL] новое направление 0 (было 204)\n",
-      "[ИНФО][CARGO] выгрузка\n",
-      "[ИНФО][CARGO] груз оставлен\n"
+      "[ИНФО][CONTROL] новая скорость 20 (была 0)\n",
+      "[ИНФО][CONTROL] новое направление 255 (было 0)\n"
      ]
     }
    ],
@@ -509,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
