fix module 1 and module 2

--- a/cyberimmunity--autonomous-car-m2.ipynb
+++ b/cyberimmunity--autonomous-car-m2.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,35 +77,38 @@
     "    \"\"\"ControlSystem блок расчёта управления \"\"\"\n",
     "\n",
     "    def _send_speed_and_direction_to_consumers(self, speed, direction):\n",
-    "        servos_q_name = CONTROL_SYSTEM_QUEUE_NAME\n",
+    "        servos_q_name = SERVOS_QUEUE_NAME\n",
     "        servos_q: Queue = self._queues_dir.get_queue(servos_q_name)\n",
     "\n",
-    "        # отправка сообщения с желаемой скоростью\n",
-    "        event_speed = Event(source=BaseControlSystem.event_source_name,\n",
-    "                            destination=servos_q_name,\n",
-    "                            operation=\"set_speed\", \n",
-    "                            parameters=speed\n",
-    "                            )\n",
+    "        # инициализация сообщения с желаемой скоростью\n",
+    "        event_speed = Event(\n",
+    "            source=self.event_source_name,\n",
+    "            destination=servos_q_name,\n",
+    "            operation=\"set_speed\",\n",
+    "            parameters=speed\n",
+    "        )\n",
     "\n",
     "        # отправка сообщения с желаемым направлением\n",
-    "        event_direction = Event(source=BaseControlSystem.event_source_name,\n",
-    "                                destination=servos_q_name,\n",
-    "                                operation=\"set_direction\",\n",
-    "                                parameters=direction)\n",
+    "        event_direction = Event(\n",
+    "            source=self.event_source_name,\n",
+    "            destination=servos_q_name,\n",
+    "            operation=\"set_direction\",\n",
+    "            parameters=direction\n",
+    "        )\n",
     "\n",
     "        servos_q.put(event_speed)\n",
-    "        servos_q.put(event_direction)       \n",
-    "\n",
+    "        servos_q.put(event_direction)\n",
     "\n",
     "    def _lock_cargo(self):\n",
     "        \"\"\" заблокировать грузовой отсек \"\"\"\n",
     "        cargo_q = self._queues_dir.get_queue(CARGO_BAY_QUEUE_NAME)\n",
     "        # инициализация сообщения с командой на блокировку грузового отсека\n",
-    "        event = Event(source=self.event_source_name,\n",
-    "                      destination=CARGO_BAY_QUEUE_NAME,\n",
-    "                      operation=\"lock_cargo\",\n",
-    "                      parameters=None\n",
-    "                      )\n",
+    "        event = Event(\n",
+    "            source=self.event_source_name,\n",
+    "            destination=CARGO_BAY_QUEUE_NAME,\n",
+    "            operation=\"lock_cargo\",\n",
+    "            parameters=None\n",
+    "        )\n",
     "        cargo_q.put(event)\n",
     "\n",
     "    def _release_cargo(self):\n",
@@ -117,20 +120,20 @@
     "            destination=CARGO_BAY_QUEUE_NAME,\n",
     "            operation=\"release_cargo\",\n",
     "            parameters=None\n",
-    "            )\n",
-    "\n",
-    "        cargo_q.put(event)\n",
+    "        )\n",
+    "        cargo_q.put(event)     \n",
     "\n",
     "\n",
     "class NavigationSystem(BaseNavigationSystem):\n",
     "    \"\"\" класс навигационного блока \"\"\"\n",
     "    def _send_position_to_consumers(self):        \n",
     "        control_q_name = CONTROL_SYSTEM_QUEUE_NAME\n",
-    "        event = Event(source=BaseNavigationSystem.event_source_name,\n",
-    "                      destination=control_q_name,\n",
-    "                      operation=\"position_update\",\n",
-    "                      parameters=self._position\n",
-    "                      )\n",
+    "        event = Event(\n",
+    "            source=self.event_source_name,\n",
+    "            destination=CONTROL_SYSTEM_QUEUE_NAME,\n",
+    "            operation=\"position_update\",\n",
+    "            parameters=self._position\n",
+    "        )\n",
     "        control_q: Queue = self._queues_dir.get_queue(control_q_name)\n",
     "        control_q.put(event)"
    ]
@@ -144,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,18 +198,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "wpl_file_content =  \"\"\"QGC WPL 110\n",
     "0\t1\t0\t16\t0\t5\t0\t0\t59.874951\t29.825225\t0\t1\n",
-    "1\t0\t3\t16\t0\t5\t0\t0\t59.876213\t29.826911\t0\t1\n",
-    "2\t0\t3\t16\t0\t5\t0\t0\t59.877475\t29.828597\t0\t1\n",
-    "3\t0\t3\t16\t0\t5\t0\t0\t59.878737\t29.830283\t0\t1\n",
-    "4\t0\t3\t16\t0\t5\t0\t0\t59.879999\t29.831969\t0\t1\n",
-    "5\t0\t3\t16\t0\t5\t0\t0\t59.881261\t29.833655\t0\t1\n",
-    "6\t0\t3\t16\t0\t5\t0\t0\t59.886483\t29.832345\t0\t1\n",
+    "1\t0\t3\t16\t0\t5\t0\t0\t59.876145   29.828535\t0\t1\n",
+    "2\t0\t3\t16\t0\t5\t0\t0\t59.876897   29.829177\t0\t1\n",
+    "3\t0\t3\t16\t0\t5\t0\t0\t59.878121   29.824136\t0\t1\n",
+    "4\t0\t3\t16\t0\t5\t0\t0\t59.881917   29.827542\t0\t1\n",
+    "5\t0\t3\t16\t0\t5\t0\t0\t59.884427   29.827059\t0\t1\n",
+    "6\t0\t3\t16\t0\t5\t0\t0\t59.886274   29.828739\t0\t1\n",
+    "7   0   3   16  0   5   0   0   59.886479   29.832717   0   1\n",
     "\"\"\"\n"
    ]
   },
@@ -237,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,14 +276,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Point(59.874951, 29.825225, 0.0), Point(59.876213, 29.826911, 0.0), Point(59.877475, 29.828597, 0.0), Point(59.878737, 29.830283, 0.0), Point(59.879999, 29.831969, 0.0), Point(59.881261, 29.833655, 0.0), Point(59.886483, 29.832345, 0.0)]\n"
+      "[Point(59.874951, 29.825225, 0.0), Point(59.876145, 29.828535, 0.0), Point(59.876897, 29.829177, 0.0), Point(59.878121, 29.824136, 0.0), Point(59.881917, 29.827542, 0.0), Point(59.884427, 29.827059, 0.0), Point(59.886274, 29.828739, 0.0), Point(59.886479, 29.832717, 0.0)]\n"
      ]
     }
    ],
@@ -292,9 +296,10 @@
     "\n",
     "from src.mission_type import GeoSpecificSpeedLimit\n",
     "speed_limits = [\n",
-    "    GeoSpecificSpeedLimit(0, 20),\n",
-    "    GeoSpecificSpeedLimit(2, 60)\n",
-    "    ]\n",
+    "    GeoSpecificSpeedLimit(0, 30),\n",
+    "    GeoSpecificSpeedLimit(3, 60),\n",
+    "    GeoSpecificSpeedLimit(5, 30),\n",
+    "]\n",
     "\n",
     "from src.mission_planner import Mission\n",
     "\n",
@@ -311,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -332,21 +337,47 @@
       "[ИНФО][QUEUES] регистрируем очередь cargo\n",
       "[ИНФО][CARGO] создан компонент грузового отсека, отсек заблокирован\n",
       "[ИНФО][MISSION PLANNER] старт системы планирования заданий\n",
-      "[ИНФО][CARGO] старт блока грузового отсека[ИНФО][CONTROL] старт системы управления\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[ИНФО][CARGO] старт блока грузового отсека\n",
+      "[ИНФО][CONTROL] старт системы управления\n",
       "[ИНФО][MISSION PLANNER] запрошена новая задача, отправляем получателям\n",
       "[ИНФО][MISSION PLANNER] новая задача отправлена в коммуникационный шлюз\n",
-      "[ИНФО][CONTROL] установлена новая задача, начинаем следовать по маршруту, текущее время 17:31:48.407299\n",
+      "[ИНФО][CONTROL] установлена новая задача, начинаем следовать по маршруту, текущее время 15:25:54.452329\n",
       "[ИНФО][CARGO] заблокировать грузовой отсек\n",
       "[ИНФО][CARGO] грузовой отсек заблокирован\n",
-      "[ИНФО][CONTROL] новая скорость 20 (была 0)\n",
-      "[ИНФО][CONTROL] новое направление 255 (было 0)\n"
+      "[ИНФО][CONTROL] новая скорость 30 (была 0)\n",
+      "[ИНФО][CONTROL] новое направление 54 (было 0)\n",
+      "[ИНФО][CONTROL] сегмент пройден\n",
+      "[ИНФО][CONTROL] новое направление 24 (было 54)\n",
+      "[ИНФО][CONTROL] новое направление 23 (было 24)\n",
+      "[ИНФО][CONTROL] новое направление 22 (было 23)\n",
+      "[ИНФО][CONTROL] новое направление 21 (было 22)\n",
+      "[ИНФО][CONTROL] сегмент пройден\n",
+      "[ИНФО][CONTROL] новое направление 296 (было 21)\n",
+      "[ИНФО][CONTROL] новое направление 295 (было 296)\n",
+      "[ИНФО][CONTROL] новое направление 294 (было 295)\n",
+      "[ИНФО][CONTROL] сегмент пройден\n",
+      "[ИНФО][CONTROL] новая скорость 60 (была 30)\n",
+      "[ИНФО][CONTROL] новое направление 24 (было 294)\n",
+      "[ИНФО][CONTROL] новое направление 25 (было 24)\n",
+      "[ИНФО][CONTROL] сегмент пройден\n",
+      "[ИНФО][CONTROL] новое направление 354 (было 25)\n",
+      "[ИНФО][CONTROL] новое направление 353 (было 354)\n",
+      "[ИНФО][CONTROL] новое направление 352 (было 353)\n",
+      "[ИНФО][CONTROL] сегмент пройден\n",
+      "[ИНФО][CONTROL] новая скорость 30 (была 60)\n",
+      "[ИНФО][CONTROL] новое направление 24 (было 352)\n",
+      "[ИНФО][CONTROL] новое направление 25 (было 24)\n",
+      "[ИНФО][CONTROL] новое направление 26 (было 25)\n",
+      "[ИНФО][CONTROL] новое направление 27 (было 26)\n",
+      "[ИНФО][CONTROL] сегмент пройден\n",
+      "[ИНФО][CONTROL] новое направление 83 (было 27)\n",
+      "[ИНФО][CONTROL] новое направление 84 (было 83)\n",
+      "[ИНФО][CONTROL] новое направление 85 (было 84)\n",
+      "[ИНФО][CONTROL] маршрут пройден, текущее время 15:28:52.052767\n",
+      "[ИНФО][CONTROL] новая скорость 0.0 (была 30)\n",
+      "[ИНФО][CONTROL] новое направление 0 (было 85)\n",
+      "[ИНФО][CARGO] выгрузка\n",
+      "[ИНФО][CARGO] груз оставлен\n"
      ]
     }
    ],
@@ -367,7 +398,7 @@
     "\n",
     "\n",
     "# координата текущего положения машинки\n",
-    "home = GeoPoint(latitude=59.939032, longitude=30.315827) \n",
+    "home = GeoPoint(latitude=points[0].latitude, longitude=points[0].longitude) \n",
     "\n",
     "\n",
     "# каталог очередей для передачи сообщений между блоками\n",
@@ -385,7 +416,6 @@
     "sitl = SITL(\n",
     "    queues_dir=queues_dir, position=home,\n",
     "    car_id=car_id, post_telemetry=afcs_present, log_level=LOG_ERROR)\n",
-    "\n",
     "\n",
     "communication_gateway = CommunicationGateway(\n",
     "    queues_dir=queues_dir, log_level=LOG_ERROR)\n",
@@ -428,7 +458,7 @@
     "# в случае превышения времени выполнения ячейки на более чем 10 секунд от заданного, \n",
     "# допустимо перезапустить вычислительное ядро и повторно выполнить весь блокнот, штрафные очки за это не начисляются\n",
     "# при условии, что повторный запуск закончился успешно\n",
-    "sleep(100)\n",
+    "sleep(180)\n",
     "\n",
     "# останавливаем все компоненты\n",
     "system_components.stop()\n",
