fix: m4 changed wpl

--- a/cyberimmunity--autonomous-car-m4.ipynb
+++ b/cyberimmunity--autonomous-car-m4.ipynb
@@ -500,6 +500,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "wpl_file_content =   \"\"\"QGC WPL 110\n",
+    "0\t0\t3\t16\t0\t5\t0\t0\t59.797417  30.272833\t0\t1\n",
+    "1\t0\t3\t16\t0\t5\t0\t0\t59.796326  30.272271\t0\t1\n",
+    "2\t0\t3\t16\t0\t5\t0\t0\t59.795488  30.273582\t0\t1\n",
+    "3\t1\t3\t16\t0\t5\t0\t0\t59.796054  30.281757\t0\t1\n",
+    "4\t0\t3\t16\t0\t5\t0\t0\t59.793197  30.301331\t0\t1\n",
+    "5\t0\t3\t16\t0\t5\t0\t0\t59.790573  30.319421\t0\t1\n",
+    "6\t0\t3\t16\t0\t5\t0\t0\t59.790740  30.322878\t0\t1\n",
+    "7\t0\t3\t16\t0\t5\t0\t0\t59.791476  30.325086\t0\t1\n",
+    "8\t0\t3\t16\t0\t5\t0\t0\t59.792483  30.326700\t0\t1\n",
+    "9\t0\t3\t16\t0\t5\t0\t0\t59.793644  30.327449\t0\t1\n",
+    "10\t0\t3\t16\t0\t5\t0\t0\t59.794873  30.327295\t0\t1\n",
+    "11\t0\t3\t16\t0\t5\t0\t0\t59.796180  30.326181\t0\t1\n",
+    "12\t0\t3\t16\t0\t5\t0\t0\t59.797457  30.324914\t0\t1\n",
+    "13\t0\t3\t16\t0\t5\t0\t0\t59.798261  30.324664\t0\t1\n",
+    "14\t0\t3\t16\t0\t5\t0\t0\t59.805876  30.324288\t0\t1\n",
+    "15\t0\t3\t16\t0\t5\t0\t0\t59.807699  30.324409\t0\t1\n",
+    "16\t0\t3\t16\t0\t5\t0\t0\t59.808593  30.325071\t0\t1\n",
+    "17\t0\t3\t16\t0\t5\t0\t0\t59.809175  30.326384\t0\t1\n",
+    "18\t0\t3\t16\t0\t5\t0\t0\t59.809566  30.328536\t0\t1\n",
+    "19\t0\t3\t16\t0\t5\t0\t0\t59.810362  30.337626\t0\t1\n",
+    "20\t0\t3\t16\t0\t5\t0\t0\t59.811015  30.340912\t0\t1\n",
+    "21\t0\t3\t16\t0\t5\t0\t0\t59.813538  30.348603\t0\t1\n",
+    "22\t0\t3\t16\t0\t5\t0\t0\t59.814648  30.353608\t0\t1\n",
+    "23\t0\t3\t16\t0\t5\t0\t0\t59.815124  30.360039\t0\t1\n",
+    "24\t0\t3\t16\t0\t5\t0\t0\t59.814962  30.368629\t0\t1\n",
+    "25\t0\t3\t16\t0\t5\t0\t0\t59.815292  30.373556\t0\t1\n",
+    "26\t0\t3\t16\t0\t5\t0\t0\t59.815549  30.381010\t0\t1\n",
+    "27\t0\t3\t16\t0\t5\t0\t0\t59.815004  30.382473\t0\t1\n",
+    "28\t0\t3\t16\t0\t5\t0\t0\t59.814160  30.382929\t0\t1\n",
+    "29\t0\t3\t16\t0\t5\t0\t0\t59.813526  30.382001\t0\t1\n",
+    "30\t0\t3\t16\t0\t5\t0\t0\t59.814168  30.380607\t0\t1\n",
+    "31\t0\t3\t16\t0\t5\t0\t0\t59.814885  30.380658\t0\t1\n",
+    "32\t0\t3\t16\t0\t5\t0\t0\t59.816907  30.381505\t0\t1\n",
+    "33\t0\t3\t16\t0\t5\t0\t0\t59.817948  30.381302\t0\t1\n",
+    "34\t0\t3\t16\t0\t5\t0\t0\t59.823817  30.378484\t0\t1\n",
+    "35\t0\t3\t16\t0\t5\t0\t0\t59.827748  30.375428\t0\t1\n",
+    "36\t0\t3\t16\t0\t5\t0\t0\t59.829736  30.374360\t0\t1\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "wpl_file = \"module4.wpl\"\n",
+    "\n",
+    "with open(wpl_file, \"w\") as f:\n",
+    "    f.write(wpl_file_content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from time import sleep\n",
     "from geopy import Point as GeoPoint\n",
     "\n",
@@ -514,16 +567,16 @@
     "from src.wpl_parser import WPLParser\n",
     "from src.mission_type import GeoSpecificSpeedLimit\n",
     "\n",
-    "wpl_file = \"module2.wpl\"\n",
+    "wpl_file = \"module4.wpl\"\n",
     "\n",
     "parser = WPLParser(wpl_file)    \n",
     "points = parser.parse()\n",
     "print(points)\n",
     "\n",
     "speed_limits = [\n",
-    "    GeoSpecificSpeedLimit(0, 30),\n",
-    "    GeoSpecificSpeedLimit(2, 60),\n",
-    "    GeoSpecificSpeedLimit(6, 30),\n",
+    "    GeoSpecificSpeedLimit(0, 60),\n",
+    "    GeoSpecificSpeedLimit(19, 110),\n",
+    "    GeoSpecificSpeedLimit(26, 60),\n",
     "]\n",
     "\n",
     "home = GeoPoint(latitude=points[0].latitude, longitude=points[0].longitude) \n",
@@ -595,7 +648,7 @@
     "control_system.enable_surprises()\n",
     "system_components.start()\n",
     "\n",
-    "sleep(150)\n",
+    "sleep(630)\n",
     "\n",
     "system_components.stop()\n",
     "\n",
